src/test/deca/test_compilateur/context/invalid/created/decl_class/decl_class_float.deca
// Description :
//    declaration d'une class deja definie par defaut
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 8 : (1.3) Identificateur de classe attendu

class float {}